# mechatronics-platform-controller

./: CMakeLists.txt  README.md
include/: ackerman.h  controller.h  mission.h  quadcopter.h
src/: ackerman.cpp  controller.cpp  main.cpp  mission.cpp  quadcopter.cpp
